--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   font-weight: 400;
 }
 
+:root {
+  --main-color:#DA291C;
+}
+
 .skip_nav a {
   position: absolute;
   top: -30px;
@@ -90,7 +94,6 @@ article .slider {
   position: relative;
   overflow: hidden;
   height: calc(100vh - 90px);
-  /* background-color: #999; */
 }
 
 article .slider-pagination {
@@ -104,13 +107,19 @@ article .slider-pagination {
   z-index: 99;
 }
 
-article .slider-pagination li {
-  display: grid;
-  place-items: center;
+article .slider-pagination .slider-value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 33.3333%;
   font-size: 1.6rem;
   font-weight: 700;
   color: #ccc;
+  cursor: pointer;
+}
+
+article .slider-pagination .slider-value.active {
+  color: var(--main-color);
 }
 
 article .slider-wrap {
@@ -121,8 +130,6 @@ article .slider-wrap {
 
 article .slider-wrap li {
   width: 100%;
-  display: flex;
-  justify-content: center;
   flex-shrink: 0;
   overflow: hidden;
 }
@@ -132,51 +139,3 @@ article .slider-wrap li img {
   height: 100%;
   object-fit: cover;
 }
-
-/* 
-.swiper-wrapper {
-  height: calc(100vh - 90px);
-}
-
-.swiper-pagination {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  transform: translateY(-50%);
-}
-
-.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0;
-  width: 33.3333%;
-  height: 100%;
-  background: transparent;
-  opacity: 1;
-  line-height: 7rem;
-  text-align: center;
-  font-size: 1.6rem;
-  font-weight: 700;
-}
-
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
-  position: absolute;
-  width: 46.154vw;
-  left: auto;
-  right: 0;
-  bottom: 0;
-  background-color: #fff;
-  height: 7rem;
-  z-index: 99;
-}
-
-.swiper-pagination-bullet-active {
-  color: #da291c;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
