[220707] tablet 및 pc 디자인 추가

--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,18 @@ body {
   text-transform: uppercase;
 }
 
+.block {
+  display: block;
+}
+
 a {
   color: inherit;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /****** header ******/
@@ -135,7 +145,7 @@ article .slider-pagination li {
 
 article .slider-pagination li::after {
   content: "/";
-  color: #ccc;
+  color: #eee;
   position: absolute;
   top: 50%;
   right: 0;
@@ -150,6 +160,10 @@ article .slider-pagination li.active {
   color: #DA291C;
 }
 
+article .slider-pagination li .pagination-title {
+  display: none;
+}
+
 article .slider-wrap {
   display: flex;
   width: 100%;
@@ -162,10 +176,22 @@ article .slider-wrap li {
   overflow: hidden;
 }
 
-article .slider-wrap li img {
+article .slider-wrap li a {
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background: no-repeat 50% / cover;
+}
+
+/* 메인배너 img */
+article .slider-wrap li:nth-child(1) a{
+  background-image: url(../images/m_banner_1.png);
+}
+article .slider-wrap li:nth-child(2) a{
+  background-image: url(https://via.placeholder.com/700x700/CD942D/999?text=img2);
+}
+article .slider-wrap li:nth-child(3) a{
+  background-image: url(https://via.placeholder.com/700x700/CD942D/999?text=img3);
 }
 
 /****** main ******/
@@ -174,7 +200,7 @@ article .slider-wrap li img {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
 }
 
 .main-title h2 {
@@ -191,16 +217,31 @@ article .slider-wrap li img {
   color: #54585A;
 }
 
+.main-pagination {
+  display: none;
+  justify-content: center;
+  margin-top: 6rem;
+}
+
+.main-pagination li {
+  margin: 0 0.5rem;
+  width: 6px;
+  height: 6px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
 /****** best_movie ******/
 
 #best_movie .best_movie-container {
+  margin: 0 2rem;
   display: flex;
   overflow: hidden;
 }
 
 #best_movie .best_movie-content {
   flex-shrink: 0;
-  margin-left:2rem;
+  margin-right:2rem;
   color: #54585A;
   font-size: 1.6rem;
 }
@@ -210,13 +251,15 @@ article .slider-wrap li img {
   overflow: hidden;
   width: 71.282vw;
   height: 97.949vw;
+  min-width: 278px;
+  min-height: 382px;
 }
 
-#best_movie .best-movie-img_box img {
+/* #best_movie .best-movie-img_box img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 #best_movie .best-movie-img_box-over {
   display: flex;
@@ -339,10 +382,10 @@ article .slider-wrap li img {
 #preview .preview-container {
   position: relative;
   margin: 0 2rem;
-  background-color: #fff;
 }
 
 #preview .preview-content {
+  position: relative;
   display: none;
 }
 
@@ -350,89 +393,93 @@ article .slider-wrap li img {
   display: block;
 }
 
-#preview .preview-container .preview-img {
+#preview .preview-content .preview-img {
   overflow: hidden;
   height: 79.487vw;
 }
 
-#preview .preview-container .preview-img img {
+/* #preview .preview-content .preview-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
-#preview .preview-container .preview-txt {
+#preview .preview-content .preview-txt {
   padding: 3rem 2rem;
   font-size: 1.4rem;
   color: #54585A;
-  line-height: 2rem;
+  line-height: 2.4rem;
+  background-color: #fff;
 }
 
-#preview .preview-container .preview-txt em {
+#preview .preview-content .preview-txt em {
   font-style: normal;
   color: #DA291C;
 }
 
-#preview .preview-container .preview-txt h4 {
+#preview .preview-content .preview-txt h4 {
   margin: 1rem 0 2rem;
   font-size: 2.4rem;
   font-weight: 500;
   line-height: 3.8rem;
   color: #000;
 }
-
-#preview .preview-container .preview-txt h4 .block {
+/* 
+#preview .preview-content .preview-txt h4 .block {
   display: block;
-}
+} */
 
-#preview .preview-container .preview-txt p {
+#preview .preview-content .preview-txt p {
   display:-webkit-box;
   -webkit-line-clamp:3;
   -webkit-box-orient:vertical;
-  height: 6rem;
+  height: 7.2rem;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-#preview .preview-container .preview-txt .ghost_btn {
+#preview .preview-content .preview-txt .ghost_btn {
   margin-top: 3rem;
   width: 11.9rem;
 }
 
-#preview .preview-container .preview-arrow {
+#preview .preview-content .preview-arrow {
   position: absolute;
   display: flex;
   bottom: 4.4rem;
   right: 2rem;
 }
 
-#preview .preview-container .preview-arrow .preview-prev,
-#preview .preview-container .preview-arrow .preview-next {
+#preview .preview-content .preview-arrow .preview-prev,
+#preview .preview-content .preview-arrow .preview-next {
   width: 22px;
   height: 22px;
   background: no-repeat 50% / contain;
+  cursor: pointer;
 }
 
-#preview .preview-container .preview-arrow .preview-prev {
+#preview .preview-content .preview-arrow .preview-prev {
   background-image: url(../images/prev_arrow.svg);
   margin-right: 2rem;
 }
 
-#preview .preview-container .preview-arrow .preview-next {
+#preview .preview-content .preview-arrow .preview-next {
   background-image: url(../images/next_arrow.svg);
 }
 
 /****** 상영 예정작 ******/
 #new_movie .new_movie-container {
+  margin: 0 2rem;
   display: flex;
   overflow: hidden;
 }
 
 #new_movie .new_movie-content {
   flex-shrink: 0;
-  width:71.282vw;
+  width: 71.282vw;
+  min-width: 278px;
   font-size: 1.4rem;
-  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 #new_movie .new_movie-content p {
@@ -447,20 +494,24 @@ article .slider-wrap li img {
 
 #new_movie .new_movie-img_tit {
   position: relative;
+  height: 99.231vw;
+  min-height: 387px;
 }
 
-#new_movie .new_movie-img_tit img{
+/* #new_movie .new_movie-img_tit img{
   width: 100%;
-  height: 99.231vw;
-}
+  height: 100%;
+  object-fit: cover;
+} */
 
 #new_movie .new_movie-tit {
-  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  position: absolute;
   bottom: 0;
   left: 0;
+  padding-right: 1rem;
   background-color: #fff;
   width: 55.128vw;
   height: 8rem;
@@ -473,8 +524,11 @@ article .slider-wrap li img {
 }
 
 #new_movie .new_movie-tit h3 {
+  overflow: hidden;
   font-size: 2.2rem;
   font-weight: 500;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 #new_movie .new_movie-content a{
@@ -498,7 +552,7 @@ article .slider-wrap li img {
 
 /****** friends ******/
 #friends {
-  margin: 10rem 2rem;
+  margin: 10rem 2rem 0;
   padding: 5rem 2rem;
   background: url(../images/img_lotte01.jpg) no-repeat 50% / cover;
 }
@@ -522,9 +576,9 @@ article .slider-wrap li img {
   color: #54585A;
 }
 
-#friends .friends-container p .block {
+/* #friends .friends-container p .block {
   display: block;
-}
+} */
 
 #friends .friends-container .ghost_btn {
   margin: 0 auto;
@@ -533,14 +587,16 @@ article .slider-wrap li img {
 
 /****** event ******/
 #event .event-container {
+  margin: 2rem;
   display: flex;
   overflow: hidden;
 }
 
 #event .event-content {
   flex-shrink: 0;
-  margin-left: 2rem;
+  margin-right: 2rem;
   width:71.282vw;
+  min-width: 278px;
   font-size: 1.2rem;
   color: #767676;
 }
@@ -548,6 +604,7 @@ article .slider-wrap li img {
 #event .event-content img {
   width: 100%;
   height: 60.769vw;
+  min-height: 237px;
 }
 
 #event .event-content em {
@@ -565,14 +622,14 @@ article .slider-wrap li img {
 
 /****** 스페셜관 ******/
 #special {
-  margin: 0 2rem 10rem;
+  margin: 0 2rem;
 }
 
 #special .special-grid {
   display: grid;
   gap: 10px;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 80px;
+  grid-auto-rows: 8rem;
 }
 
 #special .special-grid li {
@@ -587,12 +644,14 @@ article .slider-wrap li img {
 }
 
 #special .special-grid li img {
+  width: auto;
   height: 30px;
 }
 
 
 /****** footer ******/
 footer {
+  margin-top: 10rem;
   padding: 4rem 2rem;
   background-color: #54585A;
   font-size: 1.2rem;
@@ -601,57 +660,98 @@ footer {
 
 footer .footer-info {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 2.5rem;
   color: #fff;
 }
 
-footer .footer-info .m_none {
-  display: none;
+footer .footer-info li {
+  margin-right: 2rem;
+  line-height: 2.4rem;
+}
+
+footer .footer-info li span {
+  margin-right: 2rem;
+}
+
+footer .footer-info li span:last-child {
+  margin: 0;
 }
 
 footer .footer-address {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 footer .footer-address li {
-  position: relative;
-  margin: 0.5rem 2rem 0.5rem 0;
+  display: flex;
+  flex-direction: column;
 }
 
-footer .footer-address li::after {
+footer .footer-address li span {
+  position: relative;
+  display: inline-block;
+  margin: 0.5rem 1rem 0.5rem 0 ;
+  padding-right: 1rem;
+}
+
+footer .footer-address li .line::after {
   content: "";
   display: block;
   position: absolute;
   top: 50%;
-  right: -10px;
+  right: 0;
   transform: translateY(-50%);
   width: 1px;
   height: 10px;
-  background-color: #767676;
+  background-color: #ccc;
 }
 
-footer .footer-address li:nth-child(6) {
-  margin: 0.5rem 0 ;
-}
-
-footer .footer-address li:nth-child(1)::after,
-footer .footer-address li:nth-child(2)::after,
-footer .footer-address li:nth-child(4)::after,
-footer .footer-address li:nth-child(6)::after {
+footer .footer-address li .line-none::after {
   display: none;
 }
 
-footer .footer-address li:nth-child(2) {
-  width: 100%;
+
+
+
+/* 
+footer .footer-address > * {
+  margin: 1rem 0;
+}
+footer .footer-address .block {
+  display: block;
 }
 
-footer p {
-  margin-top: 0.5rem;
+footer .footer-address p span {
+  position: relative;
+  margin-right: 1rem;
+  padding-right: 1rem;
+}
+
+footer .footer-address p span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  width: 1px;
+  height: 10px;
+  background-color: #ccc;
+}
+
+footer .footer-address p span:nth-child(2)::after {
+  display: none;
+}
+
+footer .footer-info .m_none {
+  display: none;
+} */
+
+footer > p {
+  margin: 1rem 0;
   text-transform: uppercase;
 }
-
 /****** go to top ******/
 #goToTop {
   position: fixed;
@@ -663,10 +763,433 @@ footer p {
   background: #DA291C url(../images/top.svg) no-repeat 50%;
   cursor: pointer;
   z-index: 999;
+  visibility: hidden;
   opacity: 0;
   transition: 0.3s;
 }
 
 #goToTop.goToTop-show {
   opacity: 1;
+  visibility: visible;
+}
+
+@media screen and (min-width: 500px) {
+  /****** main content ******/
+  #best_movie .best_movie-content,
+  #new_movie .new_movie-content,
+  #event .event-content {
+    width: calc(50% - 1rem);
+    min-width: auto;
+    
+  }
+
+  /****** best_movie ******/
+  #best_movie .best-movie-img_box {
+    width: 100%;
+    height: auto;
+    min-width: auto;
+    min-height: auto;
+  }
+
+  /****** new_movie ******/
+  #new_movie .new_movie-img_tit {
+    height: auto;
+    min-height: auto;
+  }
+
+  #new_movie .new_movie-tit {
+    width: 80%;
+  }
+
+  /****** event ******/
+  #event .event-content img {
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) { /* tablet */
+  header .logo a {
+    width: 219px;
+    height: 37px;
+    background-image: url(../images/logo.png);
+  }
+  article .slider {
+    height: 57.617vw;
+    min-height: 590px;
+  }
+  article .slider-wrap li:nth-child(1) a{
+    background-image: url(../images/Elv_1920774.jpg);
+  }
+  article .slider-wrap li:nth-child(2) a{
+    background-image: url(../images/Thor_1920774.jpg);
+  }
+  article .slider-wrap li:nth-child(3) a{
+    background-image: url(../images/Two_1920774.jpg);
+  }
+
+  .main-title {
+    padding: 15rem 2rem 8rem;
+  }
+
+  .main-title h2 {
+    position: relative;
+    font-size: 4rem;
+  }
+
+  .main-title h2::before,
+  .main-title h2::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    width: 17rem;
+    height: 1px;
+    background-color: #DA291C;
+  }
+
+  .main-title h2::before {
+    left: -21rem;
+  }
+  .main-title h2::after {
+    right: -21rem;
+  }
+
+  .main-title p {
+    font-size: 2rem;
+  }
+
+  .main-pagination {
+    display: flex;
+  }
+
+  #best_movie .best_movie-content,
+  #new_movie .new_movie-content,
+  #event .event-content {
+    width: calc(33.333% - 1.3333rem);
+
+  }
+
+  #preview .preview-tab {
+    font-size: 2rem;
+  }
+
+  #preview .preview-tab li::after {
+    height: 12px;
+  }
+
+  #preview .preview-container {
+    margin: 0 5rem;
+  }
+  
+  #preview .preview-content .preview-box {
+    margin-left: 6rem;
+    /* margin: 0 4.883vw 0 0; */
+    position: relative;
+  }
+
+  #preview .preview-content .preview-img {
+    position: absolute;
+    top: 6rem;
+    left: -6rem;
+    width: 44.922vw;
+    height: 408px;
+  }
+
+  #preview .preview-content .preview-txt {
+    padding: 70px 35px 70px 41.992vw;
+    font-size: 1.6rem;
+  }
+
+  #preview .preview-content .preview-txt h4 {
+    font-size: 2.8rem;  
+  }
+
+  #preview .preview-content .preview-txt h4 .block {
+    display: inline-block;
+  }
+
+  #preview .preview-content .preview-txt .ghost_btn {
+    width: 180px;
+  }
+  #preview .preview-content .preview-arrow {
+    align-items: center;
+    top: 50%;
+    right: auto;
+    transform: translateY(-50%);
+    width: 100%;
+  }
+  
+  #preview .preview-content .preview-arrow .preview-prev,
+  #preview .preview-content .preview-arrow .preview-next {
+    position: absolute;
+    width: 34px;
+    height: 34px
+  }
+
+  #preview .preview-content .preview-arrow .preview-prev {
+    left: -4.2rem;
+    margin: 0;
+  }
+
+  #preview .preview-content .preview-arrow .preview-next {
+    right: -4.2rem;
+  }
+  
+  #preview .main-pagination {
+    margin-top: 10rem;
+  }
+
+  #new_movie .new_movie-tit h3 {
+    font-size: 2.4rem;
+  }
+
+  #new_movie .new_movie-content {
+    font-size: 1.6rem;
+  }
+
+  #event .event-content {
+    font-size: 1.4rem;
+  }
+
+  #event .event-content h3 {
+    font-size: 2rem;
+  }
+
+  #friends .friends-container h2 {
+    font-size: 4rem;
+  }
+
+  #friends .friends-container p {
+    font-size: 1.6rem;
+  }
+
+  #friends {
+    margin: 15rem 2rem 0;
+    padding: 10rem 5rem;
+  }
+
+  #friends .friends-container p .block:first-child {
+    display: inline-block;
+  }
+
+  #special .special-grid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 10rem;
+  }
+
+  footer{
+    margin-top: 15rem;
+    font-size: 1.6rem;
+  }
+  footer .footer-info {
+    justify-content: flex-start;
+    margin-bottom: 1.6rem;
+  }
+
+  footer .footer-info li {
+    margin-right: 2.6rem;
+    margin-bottom: 1.4rem;
+  }
+
+  footer .footer-info .m_none {
+    display: block;
+  }
+
+  footer .footer-address li p {
+    display: inline-block;
+  }
+  
+  footer .footer-address li {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  footer .footer-address li:first-child .line::after {
+    display: block;
+  }
+  
+  footer .footer-address li .line-none::after {
+    display: block;
+  }
+
+
+@media screen and (min-width: 890px) {
+  #preview .preview-content .preview-txt h4 .block {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  header{
+    position: relative;
+    padding: 0 3rem;
+    font-size: 1.6rem;
+  }
+
+  header .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  header #gnb,
+  header #utill {
+    display: flex;
+  }
+
+  header #gnb {
+    order: 1;
+    margin-right: auto;
+  }
+
+  header li {
+    margin: 0 1rem;
+  }
+  
+  header li a {
+    display: block;
+    padding: 1rem;
+    /* width: 100%; */
+  }
+
+  header li a:hover {
+    font-weight: 500;
+  }
+
+  header #gnb li ul {
+    display: none;
+  }
+
+  header #utill {
+    margin-left: auto;
+    order: 3;
+  }
+
+  header .menu_icon {
+    display: none;
+  }
+
+  header .serch_icon {
+    margin: 0 2rem;
+  }
+
+  article {
+    padding: 0 5rem;
+  }
+  
+  article .slider {
+    height: 73.1481vh;
+  }
+
+  article .slider-pagination {
+    width: 91rem;
+    padding-left: 10rem;
+    height: 14rem;
+  }
+
+  article .slider-pagination li {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  article .slider-pagination li::after {
+    display: none;
+  }
+
+  article .slider-pagination li .pagination-title {
+    display: block;
+    margin-top: 1.4rem;
+    font-weight: 400;
+  }
+
+  article .slider-pagination li.active .pagination-title {
+    color: #000;
+  }
+
+  .main-title {
+    padding: 17rem 5rem 8rem;
+  }
+
+  .main-title h2 {
+    font-size: 4.6rem;
+  }
+
+  #best_movie .best_movie-container {
+    margin: 0 auto;
+    max-width: 1400px;
+  }
+
+  #best_movie .best_movie-content {
+    width: calc(25% - 2.25rem);
+    margin-right: 3rem;
+  }
+
+  #preview {
+    margin: 17rem 5rem 0;
+    padding: 12rem 0;
+  }
+
+  #preview .preview-tab li {
+    margin: 2rem 1rem 5rem;
+  }
+  #preview .preview-container {
+    margin: 0 auto;
+    max-width: 1400px;
+    width: calc(100% - 100px);
+  }
+
+  #preview .preview-content .preview-txt {
+    padding: 10rem 8rem 10rem 70rem;
+  }
+
+  #preview .preview-content .preview-txt h4 {
+    font-size: 3.2rem;
+    margin-bottom: 3rem;
+  }
+
+  #preview .preview-content .preview-txt h4 .block {
+    display: inline-block;
+  }
+
+  #preview .preview-content .preview-txt .ghost_btn {
+    margin-top: 6rem;
+  }
+
+  #preview .preview-content .preview-img {
+    width: 640px;
+    height: 500px;
+  }
+
+  #new_movie .new_movie-container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+
+  #friends {
+    margin: 17rem 5rem 0;
+    padding: 15rem 10.938vw;
+  }
+  
+  #friends .friends-container p .block:nth-child(2) {
+    display: inline-block;
+  }
+
+  #event .event-container {
+    margin: 0 auto;
+    max-width: 1400px;
+  }
+  #special .special-grid {
+    grid-template-columns: repeat(6,200px);
+    justify-content: center;
+  }
+
+  footer {
+    margin-top: 17rem;
+  }
+  footer > ul,
+  footer > p{
+    margin: 0 auto;
+    max-width: 1400px;
+  }
 }
