[220712] css 네이밍 및 js 수정

--- a/css/pc_style.css
+++ b/css/pc_style.css
@@ -293,13 +293,16 @@
     background-color: #BF2419;
     transform: translateY(-5px);
   }
-  
+
+  /****** serch ******/
+  #serch .serch-wrap {
+    height: 80vh;
+  }
+
   #serch #serch_form {
     width: 60%;
   }
 }
-
-
 
 @media screen and (min-width: 1600px) {
   /****** header ******/
